Add modal popup functionality with waitlist and confirmation popups, including associated styles and SVG assets.

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 
 <body>
   {{> header }}
+  {{> waitlist-popoup }}
+  {{> done-popoup }}
+  <div class="popup-overlay" id="popup-overlay"></div>
   <script type="module" src="/js/main.js"></script>
 </body>
 
