Add section-finally with icons and stars, update styles for layout, and enhance Vite config for partial reloads. Include new SVG assets and update index.html to integrate the new section.

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     {{> header }}
     <main class="main">
       {{> section-hero }}
+      {{> section-finally }}
     </main>
     {{> waitlist-popoup }}
     {{> done-popoup }}
