Add new image assets for cards and coins, create new sections for checkout, promise, short, and swap in HTML, and update styles for content blocks. Remove deprecated finally section and associated styles.

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
     <main class="main">
       {{> section-hero }}
       {{> section-finally }}
+      {{> short-section }}
+      {{> swap-section }}
+      {{> checkout-section }}
+      {{> section-promise }}
     </main>
     {{> waitlist-popoup }}
     {{> done-popoup }}
