--- a/src/sections/section-finally.html
+++ b/src/sections/section-finally.html
@@ -1,6 +1,6 @@
-<div class="finally">
+<div class="finally content-block">
     <div class="container">
-        <div class="finally__content">
+        <div class="finally__content content-block__inner">
             <picture class="finally__icon icon-1">
                 <source srcset="/images/icons.webp" type="image/webp">
                 <img src="/images/icons.png" alt="image not found">
@@ -21,7 +21,7 @@
             <img src="/images/star.svg" alt= "image not found" class="finally__star star-2 dark">
             <img src="/images/star-light.svg" alt= "image not found" class="finally__star star-1 light">
             <img src="/images/star-light.svg" alt= "image not found" class="finally__star star-2 light">
-            <h2 class="finally__title">
+            <h2 class="finally__title content-block__title">
                 Finally, a wallet that’s as bold and user-friendly as you are. <br> No more dull
                 interfaces or geek-speak.
             </h2>
