Add new mention section with images and styles, update index.html to include the section, and replace SVG stars with PNG assets for improved compatibility.

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <main class="main">
       {{> section-hero }}
       {{> section-finally }}
+      {{> section-mention }}
       {{> short-section }}
       {{> swap-section }}
       {{> checkout-section }}
