--- a/src/sections/short-section.html
+++ b/src/sections/short-section.html
@@ -1,13 +1,13 @@
 <div class="short-section content-block">
     <div class="container">
         <div class="short-section__content content-block__inner">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-1 dark">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-2 dark">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-3 dark">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-4 dark">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-5 dark">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-6 dark">
-            <img src="/images/star-gray.svg" alt= "image not found" class="short-section__star star-7 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-1 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-2 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-3 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-4 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-5 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-6 dark">
+            <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-7 dark">
             <img src="/images/star-gray-light.svg" alt= "image not found" class="short-section__star star-1 light">
             <img src="/images/star-gray-light.svg" alt= "image not found" class="short-section__star star-2 light">
             <img src="/images/star-gray-light.svg" alt= "image not found" class="short-section__star star-3 light">
