Add new fees section with images and styles, update index.html to include the section, and enhance mention section with light mode support.

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       {{> section-finally }}
       {{> section-mention }}
       {{> short-section }}
+      {{> section-fees}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
