--- a/src/sections/section-mention.html
+++ b/src/sections/section-mention.html
@@ -6,8 +6,12 @@
             <p class="mention__text">Clean, modern, and so easy to use – we keep things simple and uncluttered so you can focus on the good stuff (your money, honey) without getting lost in menus.</p>
         </div>
     </div>
-    <picture class="mention__img">
+    <picture class="mention__img dark">
         <source srcset="/images/mention-img.webp" type="image/webp">
         <img src="/images/mention-img.png" alt= "image not found" >
+    </picture>
+    <picture class="mention__img light">
+        <source srcset="/images/mention-img-light.webp" type="image/webp">
+        <img src="/images/mention-img-light.png" alt= "image not found" >
     </picture>
 </section>
