Add new card images and section for top cards in HTML, update styles for cards layout, and include new SCSS file for card styles.

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       {{> section-mention }}
       {{> short-section }}
       {{> section-fees}}
+      {{> section-cards-top}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
