Add new multi-chain magic section with images and styles, update index.html to include the section, and introduce gradient text mixin for enhanced theming support.

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
       {{> short-section }}
       {{> section-fees}}
       {{> section-cards-top}}
+      {{> section-magic}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
