Add new middle card section with images and styles, update index.html to include the section, and enhance card layout in SCSS for improved responsiveness.

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       {{> section-fees}}
       {{> section-cards-top}}
       {{> section-magic}}
+      {{> section-cards-middle}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
