Add new feed section with images and styles, update index.html to include the section, and create corresponding SCSS for layout and responsiveness.

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       {{> section-cards-top}}
       {{> section-magic}}
       {{> section-cards-middle}}
+      {{> section-feed}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
