Add new light mode images for feed sections and update HTML structure to support light and dark themes, enhancing overall theme responsiveness and visual consistency.

--- a/src/sections/section-feed.html
+++ b/src/sections/section-feed.html
@@ -9,9 +9,14 @@
                         Crypto Feed
                     </span>
                 </h2>
-                <picture class="feed__img img-1">
+                <picture class="feed__img img-1 dark">
                     <source srcset="/images/feed-img-1.webp" type="image/webp">
                     <img src="/images/feed-img-1.png" alt="image not found">
+                </picture>
+                <picture class="feed__img img-1 light">
+                    <source srcset="/images/feed-img-1-light.webp" type="image/webp">
+                    <source srcset="/images/feed-img-1-light.png" type="image/png">
+                    <img src="/images/feed-img-1-light.png" alt="image not found">
                 </picture>
                 <p class="feed__text top-text">
                     Finance news, but make it TikTok
@@ -25,9 +30,14 @@
                 </p>
             </div>
             <div class="feed__content-bottom">
-                <picture class="feed__img img-2">
+                <picture class="feed__img img-2 dark">
                     <source srcset="/images/feed-img-2.webp" type="image/webp">
                     <img src="/images/feed-img-2.png" alt="image not found">
+                </picture>
+                <picture class="feed__img img-2 light">
+                    <source srcset="/images/feed-img-2-light.webp" type="image/webp">
+                    <source srcset="/images/feed-img-2-light.png" type="image/png">
+                    <img src="/images/feed-img-2-light.png" alt="image not found">
                 </picture>
                 <div class="feed__content-bottom-text-wrapper">
                     <p class="feed__text top-text">
