--- a/src/sections/section-hero.html
+++ b/src/sections/section-hero.html
@@ -14,7 +14,8 @@
         </picture>
 
         <div class="hero__icon">
-            <img src="/images/logo-white.svg" alt="image not found">
+            <img class="dark" src="/images/logo-white.svg" alt="image not found">
+            <img class="light" src="/images/logo.svg" alt="image not found">
         </div>
         <div class="hero__content">
             <h1 class="hero__title">
