Add new 'ask' section with images and styles, update index.html to include the section, and create corresponding SCSS for layout and responsiveness.

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       {{> section-magic}}
       {{> section-cards-middle}}
       {{> section-feed}}
+      {{> section-ask}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
