--- a/src/sections/section-feed.html
+++ b/src/sections/section-feed.html
@@ -5,7 +5,8 @@
                 <h2 class="feed__title">
                     Scroll-Worthy
                     <span>
-                        <img src="/images/star-2.svg" alt="image not found">
+                        <img class="dark" src="/images/star-2.svg" alt="image not found">
+                        <img class="light" src="/images/star-2-light.svg" alt="image not found">
                         Crypto Feed
                     </span>
                 </h2>
