Add new 'smart' and 'cards-bottom' sections in index.html, update SCSS to include styles for the new sections, enhancing layout and responsiveness.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
       {{> section-cards-middle}}
       {{> section-feed}}
       {{> section-ask}}
+      {{> section-smart}}
+      {{> section-cards-bottom}}
       {{> swap-section }}
       {{> checkout-section }}
       {{> section-promise }}
