Add new 'ready' section in index.html, create corresponding HTML and SCSS files, and add light and dark mode images for enhanced theme support and visual appeal.

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,14 @@
       {{> section-fees}}
       {{> section-cards-top}}
       {{> section-magic}}
+      {{> swap-section }}
       {{> section-cards-middle}}
       {{> section-feed}}
       {{> section-ask}}
       {{> section-smart}}
       {{> section-cards-bottom}}
-      {{> swap-section }}
       {{> checkout-section }}
+      {{> section-ready}}
       {{> section-promise }}
     </main>
     {{> waitlist-popoup }}
