Add new 'future' section in index.html, create corresponding HTML and SCSS files, and add light and dark mode images for improved visual appeal and theme support.

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
       {{> checkout-section }}
       {{> section-ready}}
       {{> section-promise }}
+      {{> section-future }}
     </main>
     {{> waitlist-popoup }}
     {{> done-popoup }}
