Add footer section in index.html, implement corresponding HTML and SCSS for layout, and include new light and dark mode images for enhanced theme support and visual consistency.

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     {{> waitlist-popoup }}
     {{> done-popoup }}
     <div class="popup-overlay" id="popup-overlay"></div>
+    {{> footer }}
   </div>
   <script type="module" src="/js/main.js"></script>
 </body>
