Add GSAP for animations, implement new 'swipe' section in index.html with corresponding HTML and SCSS, and update main.js for scroll-triggered animations, enhancing user interaction and visual appeal.

--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,31 @@
 </head>
 
 <body>
-  <div id="wrapper">
-    {{> header }}
-    <main class="main">
-      {{> section-hero }}
-      {{> section-finally }}
-      {{> section-mention }}
-      {{> short-section }}
-      {{> section-fees}}
-      {{> section-cards-top}}
-      {{> section-magic}}
-      {{> swap-section }}
-      {{> section-cards-middle}}
-      {{> section-feed}}
-      {{> section-ask}}
-      {{> section-smart}}
-      {{> section-cards-bottom}}
-      {{> checkout-section }}
-      {{> section-ready}}
-      {{> section-promise }}
-      {{> section-future }}
-    </main>
-    {{> waitlist-popoup }}
-    {{> done-popoup }}
-    <div class="popup-overlay" id="popup-overlay"></div>
-    {{> footer }}
-  </div>
+  {{> header }}
+  <main class="main">
+    {{> section-hero }}
+    {{> section-finally }}
+    {{> section-mention }}
+    {{> short-section }}
+    {{> section-fees}}
+    {{> section-cards-top}}
+    {{> section-magic}}
+    {{> swap-section }}
+    {{> section-cards-middle}}
+    {{> section-feed}}
+    {{> section-ask}}
+    {{> section-smart}}
+    {{> section-swipe }}
+    {{> section-cards-bottom}}
+    {{> checkout-section }}
+    {{> section-ready}}
+    {{> section-promise }}
+    {{> section-future }}
+  </main>
+  {{> waitlist-popoup }}
+  {{> done-popoup }}
+  <div class="popup-overlay" id="popup-overlay"></div>
+  {{> footer }}
   <script type="module" src="/js/main.js"></script>
 </body>
 
