Add new light mode images for swipe section and update HTML and SCSS to support light/dark themes, enhancing visual consistency and user experience.

--- a/src/sections/section-swipe.html
+++ b/src/sections/section-swipe.html
@@ -5,17 +5,29 @@
             With PinkWallet’s crypto-backed debit card, your coins step out with you into the real
             world. </p>
         <div class="swipe__content">
-            <picture class="swipe__img img-1">
+            <picture class="swipe__img img-1 dark">
                 <source srcset="/images/swipe-img-1.webp" type="image/webp">
                 <img src="/images/swipe-img-1.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-2">
+            <picture class="swipe__img img-2 dark">
                 <source srcset="/images/swipe-img-2.webp" type="image/webp">
                 <img src="/images/swipe-img-2.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-3">
+            <picture class="swipe__img img-3 dark">
                 <source srcset="/images/swipe-img-3.webp" type="image/webp">
                 <img src="/images/swipe-img-3.png" alt="image not found">
+            </picture>
+            <picture class="swipe__img img-1 light">
+                <source srcset="/images/swipe-img-1-light.webp" type="image/webp">
+                <img src="/images/swipe-img-1-light.png" alt="image not found">
+            </picture>
+            <picture class="swipe__img img-2 light">
+                <source srcset="/images/swipe-img-2-light.webp" type="image/webp">
+                <img src="/images/swipe-img-2-light.png" alt="image not found">
+            </picture>
+            <picture class="swipe__img img-3 light">
+                <source srcset="/images/swipe-img-3-light.webp" type="image/webp">
+                <img src="/images/swipe-img-3-light.png" alt="image not found">
             </picture>
         </div>
     </div>
