--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <main class="main">
     {{> section-hero }}
     {{> section-finally }}
+    {{> sections-wallet }}
     {{> section-mention }}
     {{> short-section }}
     {{> section-fees}}
