Add new light mode images for wallet section and update HTML and SCSS to support light/dark themes, enhancing visual consistency and user experience.

--- a/src/sections/sections-wallet.html
+++ b/src/sections/sections-wallet.html
@@ -14,9 +14,13 @@
             <h3 class="wallet-top__title"> PinkWallet is where gorgeous design meets effortless
                 usability,
                 giving you an experience so intuitive it just works from the first tap.</h3>
-            <picture class="wallet-top__img">
+            <picture class="wallet-top__img dark">
                 <source srcset="/images/wallet-img-1.webp" type="image/webp">
                 <img src="/images/wallet-img-1.png" alt="image not found">
+            </picture>
+            <picture class="wallet-top__img light">
+                <source srcset="/images/wallet-img-1-light.webp" type="image/webp">
+                <img src="/images/wallet-img-1-light.png" alt="image not found">
             </picture>
         </div>
     </div>
@@ -24,17 +28,27 @@
 <section class="wallet wallet-middle">
     <div class="container">
         <div class="wallet-middle__img-list-wrapper">
-            <picture class="wallet-middle__img-list list-1">
+            <picture class="wallet-middle__img-list list-1 dark">
                 <img src="./images/cards-list-1.png" alt="image not found">
             </picture>
-            <picture class="wallet-middle__img-list list-2">
+            <picture class="wallet-middle__img-list list-2 dark">
                 <img src="./images/cards-list-2.png" alt="image not found">
+            </picture>
+            <picture class="wallet-middle__img-list list-1 light">
+                <img src="./images/cards-list-1-light.png" alt="image not found">
+            </picture>
+            <picture class="wallet-middle__img-list list-2 light">
+                <img src="./images/cards-list-2-light.png" alt="image not found">
             </picture>
         </div>
         <h2 class="wallet-middle__title">Not Your Average Crypto Wallet</h2>
-        <picture class="wallet-middle__img">
+        <picture class="wallet-middle__img dark">
             <source srcset="/images/wallet-img-2.webp" type="image/webp">
             <img src="/images/wallet-img-2.png" alt="image not found">
+        </picture>
+        <picture class="wallet-middle__img light">
+            <source srcset="/images/wallet-img-2-light.webp" type="image/webp">
+            <img src="/images/wallet-img-2-light.png" alt="image not found">
         </picture>
         <p class="wallet-middle__text top-text">Tired of crypto apps that feel like they’re built by
             and
@@ -57,9 +71,13 @@
                 not corporate ) and even throws in a wink of humor when you need it. It’s finance,
                 but
                 make it fun.</p>
-            <picture class="wallet-bottom__img">
+            <picture class="wallet-bottom__img dark">
                 <source srcset="/images/wallet-img-3.webp" type="image/webp">
                 <img src="/images/wallet-img-3.png" alt="image not found">
+            </picture>
+            <picture class="wallet-bottom__img light">
+                <source srcset="/images/wallet-img-3-light.webp" type="image/webp">
+                <img src="/images/wallet-img-3-light.png" alt="image not found">
             </picture>
         </div>
     </div>
