Add 'meet' section with corresponding HTML, SCSS, and images; integrate GSAP and WOW.js for animations, enhancing user engagement and visual appeal.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     {{> swap-section }}
     {{> section-cards-middle}}
     {{> section-feed}}
+    {{> section-meet}}
     {{> section-ask}}
     {{> section-smart}}
     {{> section-swipe }}
