--- a/src/sections/section-hero.html
+++ b/src/sections/section-hero.html
@@ -12,13 +12,12 @@
             <source srcset="/images/hero-img-light.webp" type="image/webp">
             <img src="/images/hero-img-light.png" alt="Hero background" loading="lazy">
         </picture>
-
         <div class="hero__icon">
             <img class="dark" src="/images/logo-white.svg" alt="image not found">
             <img class="light" src="/images/logo.svg" alt="image not found">
         </div>
         <div class="hero__content">
-            <h1 class="hero__title">
+            <h1 class="hero__title wow animate__animated animate__fadeInUp">
                 The Future <div class="hero__title-inner"><i>is</i> <span>Pink</span></div>
             </h1>
             <h2 class="hero__subtitle">
