Update sections with animation classes for enhanced user engagement; add new light mode images for improved visual consistency across various components.

--- a/src/sections/checkout-section.html
+++ b/src/sections/checkout-section.html
@@ -21,11 +21,11 @@
                 <source srcset="/images/card-5.webp" type="image/webp">
                 <img src="/images/card-5.png" alt="image not found">
             </picture>
-            <h2 class="checkout-section__title content-block__title">
+            <h2 class="checkout-section__title content-block__title wow animate__animated animate__fadeInUp">
                 Flex your crypto gains at the checkout counter and watch jaws drop when the receipt
                 says Paid with PinkWallet. Finance glow-up level 100.
             </h2>
-            <button class="checkout-section__button btn">
+            <button class="checkout-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
