--- a/src/sections/section-ask.html
+++ b/src/sections/section-ask.html
@@ -33,7 +33,7 @@
                 <source srcset="/images/starline-light.webp" type="image/webp">
                 <img src="/images/starline-light.png" alt="image not found">
             </picture>
-            <h2 class="ask__title">Ask PIG anything (literally). <br>
+            <h2 class="ask__title wow animate__animated animate__fadeInUp">Ask PIG anything (literally). <br>
                 PIG will handle it via chat or voice, no sweat.</h2>
         </div>
     </div>
