--- a/src/sections/section-cards-bottom.html
+++ b/src/sections/section-cards-bottom.html
@@ -1,7 +1,7 @@
 <section class="cards cards-bottom">
     <div class="container">
         <div class="cards__content cards-bottom__content">
-            <div class="cards__item cards-bottom__item">
+            <div class="cards__item cards-bottom__item wow animate__animated animate__fadeInLeft">
                 <picture class="cards-bottom__img dark">
                     <source srcset="/images/cards-img-7.webp" type="image/webp">
                     <img src="/images/cards-img-7.png" alt="image not found">
@@ -22,7 +22,7 @@
                         no converting to cash, no waiting.</p>
                 </div>
             </div>
-            <div class="cards__item cards-bottom__item">
+            <div class="cards__item cards-bottom__item wow animate__animated animate__fadeInRight">
                 <div class="cards__text-wrapper">
                     <p class="cards__text cards-bottom__text top-text">It works wherever <br> cards are accepted</p>
                     <p class="cards__text cards-bottom__text bottom-text">Because it is a card <br>
