--- a/src/sections/section-cards-middle.html
+++ b/src/sections/section-cards-middle.html
@@ -1,7 +1,7 @@
 <section class="cards cards-middle">
     <div class="container">
         <div class="cards__content cards-middle__content">
-            <div class="cards__item cards-middle__item">
+            <div class="cards__item cards-middle__item wow animate__animated animate__fadeInUp">
                 <p class="cards__text cards-middle__text top-text">Contacts, Not Codes</p>
                 <p class="cards__text cards-middle__text bottom-text">Long wallet addresses are so
                     last year. Who has time to double-check 0xAJF…37QB line by line?</p>
@@ -22,7 +22,7 @@
                     <img src="/images/cards-img-3-light.png" alt="image not found">
                 </picture>
             </div>
-            <div class="cards__item cards-middle__item">
+            <div class="cards__item cards-middle__item wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
                 <p class="cards__text cards-middle__text top-text">PinkWallet brings you a familiar
                     convenience</p>
                 <p class="cards__text cards-middle__text bottom-text">A built-in contact book for
@@ -45,7 +45,7 @@
                     <img src="/images/cards-img-4-light.png" alt="image not found">
                 </picture>
             </div>
-            <div class="cards__item cards-middle__item">
+            <div class="cards__item cards-middle__item wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                 <p class="cards__text cards-middle__text top-text">Next time you need to send money
                 </p>
                 <p class="cards__text cards-middle__text bottom-text">Just pick a name from your
