--- a/src/sections/section-cards-top.html
+++ b/src/sections/section-cards-top.html
@@ -23,7 +23,7 @@
                     <img src="/images/cards-img-1-light.png" alt="image not found">
                 </picture>
             </div>
-            <div class="cards__item cards-top__item">
+            <div class="cards__item cards-top__item wow animate__animated animate__fadeInRight">
                 <p class="cards__text cards-top__text top-text">We silently pick up <br> the tab on
                     network fees</p>
                 <p class="cards__text cards-top__text bottom-text">So you can send crypto freely
