--- a/src/sections/section-feed.html
+++ b/src/sections/section-feed.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="feed__content">
             <div class="feed__content-top">
-                <h2 class="feed__title">
+                <h2 class="feed__title wow animate__animated animate__fadeInUp">
                     Scroll-Worthy
                     <span>
                         <img class="dark" src="/images/star-2.svg" alt="image not found">
@@ -19,10 +19,10 @@
                     <source srcset="/images/feed-img-1-light.png" type="image/png">
                     <img src="/images/feed-img-1-light.png" alt="image not found">
                 </picture>
-                <p class="feed__text top-text">
+                <p class="feed__text top-text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
                     Finance news, but make it TikTok
                 </p>
-                <p class="feed__text bottom-text">
+                <p class="feed__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                     PinkWallet serves up a vertical, scrollable feed of the latest crypto news,
                     trends,
                     and tips – all in a fun, snackable format. <br> Say goodbye to snooze-fest
@@ -45,7 +45,7 @@
                         It’s like your crypto FYP, because we know
                         short, snappy content is life
                     </p>
-                    <p class="feed__text bottom-text">
+                    <p class="feed__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
                         Swipe through quick video clips, memes, and market updates as easily as you
                         scroll your socials. Learn, laugh, and stay in the loop – no MBA required.
                     </p>
