--- a/src/sections/section-fees.html
+++ b/src/sections/section-fees.html
@@ -3,16 +3,16 @@
     <img src="/images/horizontal-border-2-light.png" alt="image not found" class="fees__border light">
     <div class="container">
         <div class="fees__content">
-            <h2 class="fees__title">Zero Fees, All Flair</h2>
-            <picture class="fees__img dark">
+            <h2 class="fees__title wow animate__animated animate__fadeInUp">Zero Fees, All Flair</h2>
+            <picture class="fees__img dark wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">
                 <source srcset="/images/fees-img.webp" type="image/webp">
                 <img src="/images/fees-img.png" alt="image not found">
             </picture>
-            <picture class="fees__img light">
+            <picture class="fees__img light wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">
                 <source srcset="/images/fees-img-light.webp" type="image/webp">
                 <img src="/images/fees-img-light.png" alt="image not found">
             </picture>
-            <p class="fees__text">Other wallets hit you with surprise fees at checkout – not cool.
+            <p class="fees__text wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">Other wallets hit you with surprise fees at checkout – not cool.
                 PinkWallet handles all transaction costs on the backend, so you never see a gas fee
                 ever. Send, receive, swap…
                 it’s all fee-free to you.</p>
