--- a/src/sections/section-finally.html
+++ b/src/sections/section-finally.html
@@ -21,7 +21,7 @@
             <img src="/images/star.svg" alt= "image not found" class="finally__star star-2 dark">
             <img src="/images/star-light.svg" alt= "image not found" class="finally__star star-1 light">
             <img src="/images/star-light.svg" alt= "image not found" class="finally__star star-2 light">
-            <h2 class="finally__title content-block__title">
+            <h2 class="finally__title content-block__title wow animate__animated animate__fadeInUp">
                 Finally, a wallet that’s as bold and user-friendly as you are. <br> No more dull
                 interfaces or geek-speak.
             </h2>
