--- a/src/sections/section-magic.html
+++ b/src/sections/section-magic.html
@@ -1,19 +1,19 @@
 <section class="magic">
     <div class="container">
         <h2 class="magic__title">Multi-Chain Magic</h2>
-        <picture class="magic__img">
+        <picture class="magic__img wow animate__animated animate__zoomIn" data-wow-delay="0.2s">
             <source srcset="/images/magic-img.webp" type="image/webp">
             <img src="/images/magic-img.png" alt="image not found">
         </picture>
         <div class="magic__content">
-            <div class="magic__logo">
+            <div class="magic__logo wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                 <img class="dark magic__logo-img" src="/images/logo-white.svg"
                     alt="image not found">
                 <img class="light magic__logo-img" src="/images/logo.svg" alt="image not found">
             </div>
-            <p class="magic__text top-text">Why limit yourself to one chain? <br> PinkWallet lets you
+            <p class="magic__text top-text wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">Why limit yourself to one chain? <br> PinkWallet lets you
                 swap coins across multiple blockchains instantly</p>
-            <p class="magic__text bottom-text">PinkWallet lets you swap coins across multiple
+            <p class="magic__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">PinkWallet lets you swap coins across multiple
                 blockchains instantly. Ethereum, Bitcoin, Solana – you name it. No more juggling
                 multiple apps or getting stuck thinking “ugh, this token is on which network?” </p>
         </div>
