--- a/src/sections/section-promise.html
+++ b/src/sections/section-promise.html
@@ -20,10 +20,10 @@
             <img src="/images/star-light.svg" alt= "image not found" class="promise__star star-4 light">
             <img src="/images/star-light.svg" alt= "image not found" class="promise__star star-5 light">
             <img src="/images/star-light.svg" alt= "image not found" class="promise__star star-6 light">
-            <h2 class="promise__title content-block__title">
+            <h2 class="promise__title content-block__title wow animate__animated animate__fadeInUp">
                 Superior design, powerful features, and a personality to boot – that’s the PinkWallet promise.
             </h2>
-            <p class="promise__text content-block__text">
+            <p class="promise__text content-block__text wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                 The crypto world is changing, and it’s finally built for everyone (not just the “finance experts”).
             </p>
         </div>
