--- a/src/sections/section-ready.html
+++ b/src/sections/section-ready.html
@@ -1,9 +1,9 @@
 <section class="ready">
     <div class="container">
         <div class="ready__content">
-            <h2 class="ready__title">Ready to go <span>Pink?</span></h2>
-            <h3 class="ready__subtitle">PinkWallet is more than a wallet – it’s a statement</h3>
-            <p class="ready__text">It’s the future (and it’s very pink). If you’re done with dull and ready for something that actually gets you, we’ve got you.</p>
+            <h2 class="ready__title wow animate__animated animate__fadeInUp">Ready to go <span>Pink?</span></h2>
+            <h3 class="ready__subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">PinkWallet is more than a wallet – it’s a statement</h3>
+            <p class="ready__text wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">It’s the future (and it’s very pink). If you’re done with dull and ready for something that actually gets you, we’ve got you.</p>
         </div>
     </div>
     <picture class="ready__img dark">
