--- a/src/sections/section-smart.html
+++ b/src/sections/section-smart.html
@@ -9,8 +9,8 @@
             <img src="/images/smart-img-light.png" alt="image not found">
         </picture>
         <div class="smart__content">
-            <h2 class="smart__title">She’s smart, sassy, and always on call</h2>
-            <p class="smart__text">Consider her your 24/7 crypto concierge. Manage your money with confidence (and maybe a few jokes along the way) because PIG’s got your back.</p>
+            <h2 class="smart__title wow animate__animated animate__fadeInUp">She’s smart, sassy, and always on call</h2>
+            <p class="smart__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Consider her your 24/7 crypto concierge. Manage your money with confidence (and maybe a few jokes along the way) because PIG’s got your back.</p>
         </div>
     </div>
 </section>
