--- a/src/sections/section-swipe.html
+++ b/src/sections/section-swipe.html
@@ -1,7 +1,7 @@
 <section class="swipe">
     <div class="container">
-        <h2 class="swipe__title">Swipe Right on Crypto</h2>
-        <p class="swipe__text">Who says crypto has to stay online? <br>
+        <h2 class="swipe__title wow animate__animated animate__fadeInUp">Swipe Right on Crypto</h2>
+        <p class="swipe__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Who says crypto has to stay online? <br>
             With PinkWallet’s crypto-backed debit card, your coins step out with you into the real
             world. </p>
         <div class="swipe__content">
