--- a/src/sections/short-section.html
+++ b/src/sections/short-section.html
@@ -15,10 +15,10 @@
             <img src="/images/star-gray-light.svg" alt= "image not found" class="short-section__star star-5 light">
             <img src="/images/star-gray-light.svg" alt= "image not found" class="short-section__star star-6 light">
             <img src="/images/star-gray-light.svg" alt= "image not found" class="short-section__star star-7 light">
-            <h2 class="short-section__title content-block__title">
+            <h2 class="short-section__title content-block__title wow animate__animated animate__fadeInUp">
                 In short: we’ve made crypto easy-peasy, gorgeous, and actually enjoyable.
             </h2>
-            <button class="short-section__button btn">
+            <button class="short-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
