--- a/src/sections/section-future.html
+++ b/src/sections/section-future.html
@@ -17,11 +17,11 @@
             <img src="/images/future-img-1-light.png" alt="image not found">
         </picture>
         <div class="future__content">
-            <h2 class="future__title">Let’s do this - the future is pink and it’s calling your name!
+            <h2 class="future__title wow animate__animated animate__fadeInUp">Let’s do this - the future is pink and it’s calling your name!
             </h2>
-            <p class="future__text"> Join the Waitlist now and be the first to experience this
+            <p class="future__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"> Join the Waitlist now and be the first to experience this
                 glow-up.</p>
-            <button class="future__button btn">
+            <button class="future__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
