--- a/src/sections/section-hero.html
+++ b/src/sections/section-hero.html
@@ -20,29 +20,29 @@
             <h1 class="hero__title wow animate__animated animate__fadeInUp">
                 The Future <div class="hero__title-inner"><i>is</i> <span>Pink</span></div>
             </h1>
-            <h2 class="hero__subtitle">
+            <h2 class="hero__subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
                 Finance just got a major glow-up
             </h2>
-            <p class="hero__text">
+            <p class="hero__text wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                 Meet PinkWallet, the fun, fearless crypto wallet that <i>slays</i> boring finance
                 with <u>style.</u>
             </p>
-            <button class="hero__button btn">
+            <button class="hero__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
                 </span>
             </button>
             <div class="hero__labels">
-                <div class="hero__label">
+                <div class="hero__label wow animate__animated animate__fadeInLeft" data-wow-delay="0.8s">
                     <img src="/images/label-icon-1.svg" alt="image not found">
                     <span>AI Powered</span>
                 </div>
-                <div class="hero__label">
+                <div class="hero__label wow animate__animated animate__fadeInUp" data-wow-delay="1s">
                     <img src="/images/label-icon-2.svg" alt="image not found">
                     <span>Gas Free</span>
                 </div>
-                <div class="hero__label">
+                <div class="hero__label wow animate__animated animate__fadeInRight" data-wow-delay="1.2s">
                     <img src="/images/label-icon-3.svg" alt="image not found">
                     <span>Comes with a free Debit Card</span>
                 </div>
