Refactor waitlist button implementation to use a data attribute for improved scalability; update event listener setup in main.js to handle multiple buttons across sections.

--- a/src/sections/short-section.html
+++ b/src/sections/short-section.html
@@ -18,7 +18,7 @@
             <h2 class="short-section__title content-block__title wow animate__animated animate__fadeInUp">
                 In short: we’ve made crypto easy-peasy, gorgeous, and actually enjoyable.
             </h2>
-            <button class="short-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+            <button class="short-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s" data-join-waitlist>
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
