--- a/src/sections/checkout-section.html
+++ b/src/sections/checkout-section.html
@@ -25,7 +25,7 @@
                 Flex your crypto gains at the checkout counter and watch jaws drop when the receipt
                 says Paid with PinkWallet. Finance glow-up level 100.
             </h2>
-            <button class="checkout-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+            <button class="checkout-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s" data-join-waitlist>
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
