--- a/src/sections/section-future.html
+++ b/src/sections/section-future.html
@@ -21,7 +21,7 @@
             </h2>
             <p class="future__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"> Join the Waitlist now and be the first to experience this
                 glow-up.</p>
-            <button class="future__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
+            <button class="future__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.4s" data-join-waitlist>
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
