--- a/src/sections/section-hero.html
+++ b/src/sections/section-hero.html
@@ -27,7 +27,7 @@
                 Meet PinkWallet, the fun, fearless crypto wallet that <i>slays</i> boring finance
                 with <u>style.</u>
             </p>
-            <button class="hero__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
+            <button class="hero__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.6s" data-join-waitlist>
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
