Add launch section with corresponding HTML, SCSS, and images; include new icons and promotional graphics for the PinkWallet launch campaign.

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   {{> header }}
   <main class="main">
     {{> section-hero }}
+    {{> section-launch }}
     {{> section-finally }}
     {{> sections-wallet }}
     {{> section-mention }}
