--- a/src/sections/section-launch.html
+++ b/src/sections/section-launch.html
@@ -1,5 +1,9 @@
 <section class="launch">
     <div class="container">
+        <picture class="launch__frame">
+            <source srcset="/images/launch-frame.webp" type="image/webp">
+            <img src="/images/launch-frame.png" alt="image not found">
+        </picture>
         <div class="launch__content">
             <span class="launch__sublabel">Pink Is Paying. Literally.</span>
             <h3 class="launch__subtitle">We’re celebrating the  <br>  launch of PinkWallet with a... </h3>
